# Knowledgebase-test

./: .env.example  .gitignore  README.md  pyproject.toml  tasks.ps1
configs/: _defaults.yaml  exp_a_variants.yaml  exp_b_stability.yaml  smoke.yaml
literature/: README.md
literature/papers/markdown/: alce-2305.14627.md  ares-2311.09476.md  beir-2104.08663.md  crag-2406.04744.md  facts-grounding-2512.10791.md  factscore-2305.14251.md  generative-search-verifiability-2304.09848.md  kilt-2009.02252.md  multihop-rag-2401.15391.md  nomiracl-2312.11361.md  rag-evaluation-comprehensive-survey-2504.14891.md  rag-evaluation-survey-2405.07437.md  ragas-2309.15217.md  ragbench-2407.11005.md  rgb-2309.01431.md  safe-long-form-factuality-2403.18802.md
literature/papers/notes_zh/: README.md  alce-2305.14627.notes.zh.md  ares-2311.09476.notes.zh.md  beir-2104.08663.notes.zh.md  crag-2406.04744.notes.zh.md  facts-grounding-2512.10791.notes.zh.md  factscore-2305.14251.notes.zh.md  generative-search-verifiability-2304.09848.notes.zh.md  kilt-2009.02252.notes.zh.md  multihop-rag-2401.15391.notes.zh.md  nomiracl-2312.11361.notes.zh.md  rag-evaluation-comprehensive-survey-2504.14891.notes.zh.md  rag-evaluation-survey-2405.07437.notes.zh.md  ragas-2309.15217.notes.zh.md  ragbench-2407.11005.notes.zh.md  rgb-2309.01431.notes.zh.md  safe-long-form-factuality-2403.18802.notes.zh.md
src/ragbench/: __init__.py  cli.py
src/ragbench/config/: __init__.py  loader.py  (+1 more)
tests/: conftest.py  test_config.py  test_protocols.py  test_registry.py  test_smoke_e2e.py  test_stability.py  test_systems.py
(+45 files in other folders)
